Bug 1659470 - Handle printing with an empty file name in nsDeviceContextSpecWin. r=jwatt

Ideally print preview and co. shouldn't need a PrintTarget at all, I'd think...
Though that's a bigger refactoring.

Differential Revision: https://phabricator.services.mozilla.com/D89452